# shivass-workflows

./: .env.example  .gitignore  Codex-Agent-Implementation-Plan.md  Dockerfile  README.md  TEST_COVERAGE_SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  submit-cv.html
.github/workflows/: ci.yml
alembic/: __init__.py  env.py  script.py.mako
alembic/versions/: 20240712_01_normalized_schema.py  __init__.py
docs/: db-schema-plan-review.md
frontend/: .eslintrc.json  eslint.config.mjs  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json  vitest.config.ts
frontend/__tests__/: analysis-form.test.jsx  analysisFormHelpers.test.js  artifact-viewer.test.jsx  defaultChannels.test.js  googleDocs.test.js  theme.test.jsx
frontend/app/: globals.css  layout.jsx  page.jsx
frontend/components/: AnalysisForm.jsx  ArtifactViewer.jsx  Dashboard.jsx  RunHistoryTable.jsx  StatusBadge.jsx  ThemeProvider.jsx  ThemeToggle.jsx  analysisFormHelpers.js
frontend/lib/: api.js  defaultChannels.js  googleDocs.js  googleDocs.test.js
scripts/: backfill_gemini.py  clear_tokens.py
src/app/: config.py  main.py  routes.py  schemas.py
src/orchestrator/: exceptions.py  graph.py  runner.py  state.py  utils.py
src/services/: cache.py  channel_defaults.py  container.py  gemini.py  gmail.py  google_docs.py  google_drive.py  google_oauth.py  google_service_account.py  llm.py  migrations.py  oauth_tokens.py  ranking.py  secrets.py  storage.py  youtube.py
src/tests/: conftest.py  fixtures.py  test_backfill_gemini.py  test_cache.py  test_channel_defaults.py  test_email_smoke.py  test_gmail_service.py  test_google_oauth.py  test_graph.py  test_llm_structures.py  test_nodes.py  (+7 more)
(+22 files in other folders)
